--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,6 +25,10 @@ services:
     tty: true
     ports:
       - "3307:3307"
+    volumes:
+      - type: bind
+        source: ./db_data
+        target: /var/lib/mysql
     environment:
       MYSQL_DATABASE: ${DB_DATABASE}
       MYSQL_USER: ${DB_USERNAME}
